Updates to get things working on all platforms

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,34 +5,23 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "Mac - NET5.0",
+            "name": "Mac - NET Core",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build-mac",
-            "program": "${workspaceFolder}/artifacts/bin/Debug/net5.0/TestEtoOpenTK.Mac64.app/Contents/MacOS/TestEtoOpenTK.Mac64",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net7.0-macos/TestEtoSkiaSharp.Mac.app/Contents/MacOS/TestEtoSkiaSharp.Mac",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
-            "stopAtEntry": false
+            "stopAtEntry": false,
+            "justMyCode": false
         },
         {
-            "name": "Mac - mono",
-            "type": "mono",
-            "request": "launch",
-            "preLaunchTask": "build-mac",
-            "program": ".",
-            "args": [],
-            "cwd": "${workspaceFolder}",
-            "console": "internalConsole",
-            "runtimeExecutable": "${workspaceFolder}/artifacts/bin/Debug/net48/TestEtoOpenTK.Mac64.app/Contents/MacOS/TestEtoOpenTK.Mac64",
-            "passDebugOptionsViaEnvironmentVariable": true
-        },
-        {
-            "name": "Gtk - NET5.0",
+            "name": "Gtk - NET Core",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build-gtk",
-            "program": "${workspaceFolder}/artifacts/bin/Debug/net5.0/TestEtoOpenTK.Gtk.dll",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net7.0/TestEtoSkiaSharp.Gtk.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
@@ -43,28 +32,52 @@
             "type": "mono",
             "request": "launch",
             "preLaunchTask": "build-gtk",
-            "program": "${workspaceFolder}/artifacts/bin/Debug/net48/TestEtoOpenTK.Gtk.exe",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net48/TestEtoSkiaSharp.Gtk.exe",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
         },
         {
-            "name": "Wpf - NET5.0",
+            "name": "Wpf - NET Core",
             "type": "coreclr",
             "request": "launch",
             "preLaunchTask": "build-wpf",
-            "program": "${workspaceFolder}/artifacts/bin/Debug/net5.0-windows/TestEtoOpenTK.Wpf.dll",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net7.0-windows/TestEtoSkiaSharp.Wpf.dll",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
             "stopAtEntry": false
         },
         {
-            "name": "Wpf - NET4.8",
+            "name": "Wpf - NET FX",
             "type": "clr",
             "request": "launch",
             "preLaunchTask": "build-wpf",
-            "program": "${workspaceFolder}/artifacts/bin/Debug/net48/TestEtoOpenTK.Wpf.exe",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net48/TestEtoSkiaSharp.Wpf.exe",
+            "targetArchitecture": "x86_64",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "WinForms - NET Core",
+            "type": "coreclr",
+            "request": "launch",
+            "preLaunchTask": "build-winforms",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net7.0-windows/TestEtoSkiaSharp.WinForms.dll",
+            "args": [],
+            "cwd": "${workspaceFolder}",
+            "console": "internalConsole",
+            "stopAtEntry": false
+        },
+        {
+            "name": "WinForms - NET FX",
+            "type": "clr",
+            "request": "launch",
+            "preLaunchTask": "build-winforms",
+            "program": "${workspaceFolder}/artifacts/bin/Debug/net48/TestEtoSkiaSharp.WinForms.exe",
+            "targetArchitecture": "x86_64",
             "args": [],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
