--- a/src/Eto.SkiaSharp.Gtk/Eto.SkiaSharp.Gtk.csproj
+++ b/src/Eto.SkiaSharp.Gtk/Eto.SkiaSharp.Gtk.csproj
@@ -1,7 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFrameworks>net6.0;net462</TargetFrameworks>
+    <LangVersion>10.0</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -10,6 +11,7 @@
 
   <ItemGroup>
     <PackageReference Include="Eto.Platform.Gtk" Version="2.7.5" />
+    <PackageReference Include="SkiaSharp.Views.Gtk3" Version="2.88.3" />    
   </ItemGroup>
 	
 </Project>
