--- a/src/Eto.SkiaSharp.Mac/Eto.SkiaSharp.macOS.csproj
+++ b/src/Eto.SkiaSharp.Mac/Eto.SkiaSharp.macOS.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 	
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net7.0-macos</TargetFramework>
 
     <RuntimeIdentifiers>osx-x64;osx-arm64</RuntimeIdentifiers>
   </PropertyGroup>
@@ -11,7 +11,8 @@
   </ItemGroup>
 	
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Mac64" Version="2.7.5" />
+    <PackageReference Include="Eto.Platform.macOS" Version="2.7.5" />
+    <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="2.88.3" />
   </ItemGroup>
-	
+  
 </Project>
