--- a/src/Eto.SkiaSharp.WinForms/Eto.SkiaSharp.WinForms.csproj
+++ b/src/Eto.SkiaSharp.WinForms/Eto.SkiaSharp.WinForms.csproj
@@ -10,8 +10,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Eto.Platform.Wpf" Version="2.7.5" />
-    <PackageReference Include="SkiaSharp.Views.WPF" Version="2.88.3" />    
+    <PackageReference Include="Eto.Platform.Windows" Version="2.7.5" />
+    <PackageReference Include="SkiaSharp.Views.WindowsForms" Version="2.88.3" />    
   </ItemGroup>
 
 </Project>
