--- a/src/Eto.SkiaSharp/Eto.SkiaSharp.csproj
+++ b/src/Eto.SkiaSharp/Eto.SkiaSharp.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Eto.Forms" Version="2.7.5" />
     <PackageReference Include="SkiaSharp" Version="2.88.3" />
+    <PackageReference Include="SkiaSharp.Views.Desktop.Common" Version="2.88.3" />
   </ItemGroup>
 
 </Project>
