--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,7 +19,7 @@ jobs:
     runs-on: windows-latest
 
     env:
-      PlatformBuildParameters: /p:Platform=Windows
+      PlatformBuildParameters: 
 
     steps:
     - uses: actions/checkout@v2
@@ -27,7 +27,7 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.105'
 
     - uses: actions/cache@v1
       with:
@@ -56,7 +56,7 @@ jobs:
     runs-on: macos-latest
 
     env:
-      PlatformBuildParameters: /p:Platform=Mac
+      PlatformBuildParameters: 
 
     steps:
     - uses: actions/checkout@v2
@@ -64,14 +64,10 @@ jobs:
     - name: Setup .NET Core
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '7.0.x'
+        dotnet-version: '7.0.105'
 
-    - name: setup-xamarin
-      uses: maxim-lobanov/setup-xamarin@v1
-      with:
-        mono-version: latest
-        xamarin-mac-version: latest
-        xcode-version: latest
+    - name: Install macos workload
+      run: sudo dotnet workload install macos --from-rollback-file dotnet-workloads.json
 
     - uses: actions/cache@v1
       with:
